// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Acordian Component opens sections 1`] = `
<ul
  className="content"
>
  <li
    key="0"
  >
    <button
      onClick={[Function]}
    >
       
      Section 1
       
    </button>
     
  </li>
  <li
    key="1"
  >
    <button
      onClick={[Function]}
    >
       
      Section 2
       
    </button>
     
  </li>
  <li
    key="2"
  >
    <button
      onClick={[Function]}
    >
       
      Section 3
       
    </button>
    <p>
      Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?
    </p>
     
  </li>
</ul>
`;

exports[`Acordian Component opens sections correctly 1`] = `
<ul
  className="content"
>
  <li
    key="0"
  >
    <button
      onClick={[Function]}
    >
       
      Section 1
       
    </button>
     
  </li>
  <li
    key="1"
  >
    <button
      onClick={[Function]}
    >
       
      Section 2
       
    </button>
     
  </li>
  <li
    key="2"
  >
    <button
      onClick={[Function]}
    >
       
      Section 3
       
    </button>
    <p>
      Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?
    </p>
     
  </li>
</ul>
`;

exports[`Acordian Component renders no content to start 1`] = `
<ul
  className="content"
>
  <li
    key="0"
  >
    <button
      onClick={[Function]}
    >
       
      Section 1
       
    </button>
     
  </li>
  <li
    key="1"
  >
    <button
      onClick={[Function]}
    >
       
      Section 2
       
    </button>
     
  </li>
  <li
    key="2"
  >
    <button
      onClick={[Function]}
    >
       
      Section 3
       
    </button>
     
  </li>
</ul>
`;

exports[`Acordian Component renders when the page loads 1`] = `
<ul
  className="content"
/>
`;
